data/collection/fixes/descriptions/scala/scala-1386
The following is correctly disallowed:
```scala
scala> def foo(x: Int) = x + 1
foo: (Int)Int

scala> def bar(g: (=>Int) => Int, x: Int) = g(x)
bar: ((=> Int) => Int,Int)Int

scala> bar(foo, 3)
<console>:7: error: type mismatch;
 found   : (Int) => Int
 required: (=> Int) => Int
       bar(foo, 3)
           ^
```
but at present this seems to work:
```scala
scala> def myToString(x : Any) : String = x.toString   
foo: (Any)String

scala> def bar(g:(=>Any) => String, x:Int) = g(x)
bar: ((=> Any) => String,Int)String

scala> bar(myToString, 3)
res13: String = <function>
```